BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_SPRDETS__c.object
<CustomObject>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <description>This formula field is created to send Created By username tp PS via Outbound message.</description>
        <formula>CreatedBy.Username</formula>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SPR_DETS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Case_Number__c</fullName>
        <formula>HSvc_Case__r.CaseNumber</formula>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SPR_DETS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Custom1__c</fullName>
        <label>Custom 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Custom2__c</fullName>
        <label>Custom 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Custom3__c</fullName>
        <label>Custom 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DETSGroup__c</fullName>
        <label>DETS Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_EngineeringComments__c</fullName>
        <label>Engineering Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_EngineeringECN__c</fullName>
        <label>Engineering ECN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_EngineeringOwner__c</fullName>
        <label>Engineering Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_EngineeringSeverity__c</fullName>
        <label>Engineering Severity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_EngineeringStatus__c</fullName>
        <label>Engineering Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ErrorMessage__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_ExternalId__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_HNSProductLine__c</fullName>
        <label>DETS Cabinet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_InitialMagnitude__c</fullName>
        <label>Initial Magnitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_PhaseDetected__c</fullName>
        <label>Phase Detected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ProblemFrequency__c</fullName>
        <label>Problem Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RecommendedSolution__c</fullName>
        <label>Recommended Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Release__c</fullName>
        <label>Release #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_SPRAddedBy__c</fullName>
        <label>SPR Added By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_SPRDateCreated__c</fullName>
        <label>SPR Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_SPRLink__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;}&quot;,  HSvc_SPRNumber__c, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPR Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_SPRNumber__c</fullName>
        <label>SPR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_SPR_Status__c</fullName>
        <label>SPR Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_TestNumber__c</fullName>
        <label>Test Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hsvc_ProblemType__c</fullName>
        <label>Problem Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Name__c</fullName>
        <description>This formula field is created to send Last Modified By Username to PS via outbound message</description>
        <formula>LastModifiedBy.Username</formula>
        <label>Last Modified By Name</label>
        <type>Text</type>
    </fields>
    <label>CRM SPR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HSvc_HNSProductLine__c</columns>
        <columns>HSvc_Product__c</columns>
        <columns>HSvc_InitialMagnitude__c</columns>
        <columns>HSvc_PhaseDetected__c</columns>
        <columns>HSvc_ProblemFrequency__c</columns>
        <columns>Hsvc_ProblemType__c</columns>
        <columns>HSvc_RecommendedSolution__c</columns>
        <columns>HSvc_Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>CRM SPR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRM SPR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>